Fix information header text on mobile

--- a/app/frontend/src/stylesheets/pages/info.sass
+++ b/app/frontend/src/stylesheets/pages/info.sass
@@ -1,6 +1,9 @@
 .info-header-text
   position: absolute
   bottom: 20%
+  h1
+    @media screen and (max-width: 749px)
+      font-size: 3rem !important
 
 //***** Venue *****//
 
